overflow fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
 body {
-    padding-top: 3.5rem
+    padding-top: 3.5rem;
+    overflow: hidden;
 }
 
 h1,h3 {
